--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-collapsible":  "^0.3.0",
+		"svelte-material-icons": "^3.0.5",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
