--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
-		"svelte-collapsible":  "^0.3.0",
+		"svelte-collapsible": "^0.3.0",
 		"svelte-material-icons": "^3.0.5",
 		"tailwindcss": "^3.4.1",
 		"tslib": "^2.4.1",
@@ -44,6 +44,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.39.8",
+		"@tronscanteam/leaflet.markercluster": "^1.5.0",
 		"leaflet": "^1.9.4"
 	}
 }
