--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules
+
 /build
 /.svelte-kit
 /package
@@ -11,3 +12,11 @@ node_modules
 .output
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Nicht die Geodaten pushen, den Ordner mit den Segmenten schon!
+/static/segments/*
+!/static/segments/
+
+/import/data
+/import/venv
+
