--- a/preparation/requirements.txt
+++ b/preparation/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==4.4.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -19,14 +20,19 @@ comm==0.2.2
 debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
+deprecation==2.1.0
 executing==2.0.1
 fastjsonschema==2.20.0
 fiona==1.9.6
 fqdn==1.5.1
 geopandas==0.14.3
+gotrue==2.6.0
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
 httpcore==1.0.5
 httpx==0.27.0
+hyperframe==6.0.1
 idna==3.7
 ipykernel==6.29.5
 ipython==8.26.0
@@ -67,21 +73,26 @@ pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
 platformdirs==4.2.2
+postgrest==0.16.9
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.18.0
 pyproj==3.6.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
 qtconsole==5.5.2
 QtPy==2.4.1
+realtime==1.0.6
 referencing==0.35.1
 requests==2.32.3
 rfc3339-validator==0.1.4
@@ -94,11 +105,17 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
 stack-data==0.6.3
+storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.6.0
+supafunc==0.5.0
 terminado==0.18.1
 tinycss2==1.3.0
 tornado==6.4.1
+tqdm==4.66.4
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.2
@@ -106,4 +123,5 @@ wcwidth==0.2.13
 webcolors==24.6.0
 webencodings==0.5.1
 websocket-client==1.8.0
+websockets==12.0
 widgetsnbextension==4.0.11
