--- a/preparation/requirements.txt
+++ b/preparation/requirements.txt
@@ -17,6 +17,8 @@ click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
 comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
 debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
@@ -24,6 +26,7 @@ deprecation==2.1.0
 executing==2.0.1
 fastjsonschema==2.20.0
 fiona==1.9.6
+fonttools==4.53.1
 fqdn==1.5.1
 geopandas==0.14.3
 gotrue==2.6.0
@@ -56,7 +59,9 @@ jupyterlab==4.2.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.2
 jupyterlab_widgets==3.0.11
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.9.1
 matplotlib-inline==0.1.7
 mistune==3.0.2
 nbclient==0.10.0
@@ -72,6 +77,7 @@ pandas==2.2.1
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
+pillow==10.4.0
 platformdirs==4.2.2
 postgrest==0.16.9
 prometheus_client==0.20.0
@@ -83,6 +89,7 @@ pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+pyparsing==3.1.2
 pyproj==3.6.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
