--- a/preparation/requirements.txt
+++ b/preparation/requirements.txt
@@ -23,6 +23,7 @@ debugpy==1.8.2
 decorator==5.1.1
 defusedxml==0.7.1
 deprecation==2.1.0
+exceptiongroup==1.2.2
 executing==2.0.1
 fastjsonschema==2.20.0
 fiona==1.9.6
@@ -106,7 +107,6 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.19.0
 Send2Trash==1.8.3
-setuptools==70.3.0
 shapely==2.0.3
 six==1.16.0
 sniffio==1.3.1
@@ -118,6 +118,7 @@ supabase==2.6.0
 supafunc==0.5.0
 terminado==0.18.1
 tinycss2==1.3.0
+tomli==2.0.1
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
