splitter-Skript auf neuen Datensatz angepasst, zugehörige Dokumentation aktualisiert sowie den preparation-Ordner gründlich aufgeräumt

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ frontend/static/segments/
 
 preparation/.ipynb_checkpoints
 preparation/data
-preparation/segments
+preparation/input
+preparation/input_analysis
 preparation/venv
 preparation/__pycache__
 
