buttonBar am unteren Screenrand mit Klickfunktionalität

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.39.8",
 		"@tronscanteam/leaflet.markercluster": "^1.5.0",
-		"leaflet": "^1.9.4"
+		"leaflet": "^1.9.4",
+		"svelte-routing": "^2.13.0"
 	}
 }
