--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,10 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.39.8",
 		"@tronscanteam/leaflet.markercluster": "^1.5.0",
+		"d3": "^7.9.0",
+		"d3-scale": "^4.0.2",
 		"leaflet": "^1.9.4",
+		"svelte-collapse": "^0.1.3",
 		"svelte-routing": "^2.13.0"
 	}
 }
